# PluS

./: CMakeLists.txt  CMakeSettings.json  README.md
PluS/: CMakeLists.txt
PluS/include/: PluS.h
PluS/include/PluS/: Defines.h  Feature.h  FeatureFactory.h  FeatureIterator.h  PayloadHandle.h  Plugin.h  PluginFeatureIterator.h  PluginHandle.h  PluginHandleCreator.h  PluginImplementation.h  PluginManager.h  Types.h
PluS/include/PluS/Platform/: UnixPluginHandle.h  Win32HandleHelper.h  Win32PayloadHandle.h  Win32PluginHandle.h
PluS/src/: FeatureIterator.cpp  PayloadHandle.cpp  PluS.cpp  PluginFeatureIterator.cpp  PluginHandle.cpp  PluginHandleCreator.cpp  PluginImplementation.cpp  PluginManager.cpp  Types.cpp
PluS/src/Platform/: UnixPluginHandle.cpp  Win32PayloadHandle.cpp  Win32PluginHandle.cpp
PluS/template/: TemplatePlugin.cpp
include/: PluginSystem.h
include/PluginSystem/: Feature.h  Plugin.h  PluginManager.h
test/PayloadInjector/: CMakeLists.txt  PayloadInjector.cpp
test/Sandbox/: CMakeLists.txt  MathFeature.h  Sandbox.cpp
test/TestPayload/: CMakeLists.txt  TestPayload.cpp
test/TestPlugin/: CMakeLists.txt  TestPlugin.cpp
